[post] not happy

--- a/_posts/2017-09-20-0920-zai-luogang.md
+++ b/_posts/2017-09-20-0920-zai-luogang.md
@@ -12,4 +12,14 @@ excerpt: 开始一段隐忍向前的生活
 
 >古之所谓豪杰之士者, 必有过人之节。人情有所不能忍者，匹夫见辱，拔剑而起，挺身而斗，此不足为勇也。天下有大勇者，卒然临之而不惊，无故加之而不怒。此其所挟持者甚大，而其志甚远也。
 
-环境无法改变， 唯有自强不息。
+一个选择, 忍, 找到工作再走, 你走了不单单是工资的问题, 社保都断了, 最多断缴3个月, 自己缴纳对于没有收入的情况来说负担还是很大的.
+
+开发周期再长的项目和你有毛的关系? 有哪条法鲁规定没开发完就不能离职吗?你别把自己想的很重要, 公司只有两个PHP? 你信不信你走了公司分分钟从市场再找3个来?
+
+人如蝼蚁, 不管你多厉害, 公司没你一样转, 你没公司一样活, 兄弟, 出来混, 求得是财, 不要谈感情, 公事公办, 按照法律规定, 你最多提前一个月通知公司自己要离职, 就算尽到义务了, 其他的,别想那么多, OK?
+
+不是股东的话, 想走就走;
+不是大股东的话, 想走思考一下再走!!!
+
+如上
+
